syntax = "proto3";

option go_package="github.com/c12s/starmap/api";
package proto;

import "starmap_model.proto";

service RegistryService{
    rpc PutChart(StarChart) returns(PutChartResp){}
    rpc GetChartMetadata(GetChartFromMetadataReq) returns(GetChartResp){}
    rpc GetChartsLabels(GetChartsLabelsReq) returns(GetChartsLabelsResp){}
    rpc GetChartId(GetChartIdReq) returns(GetChartResp){}
    rpc GetMissingLayers(GetMissingLayersReq) returns(GetMissingLayersResp){}
    rpc DeleteChart(DeleteChartReq) returns(EmptyMessage){}
}

message GetMissingLayersReq {
  string chartId = 1;
  string namespace = 2;
  string maintainer = 3;
  repeated string layers = 4;
}

message GetMissingLayersResp {
  string chartId = 1;
  string namespace = 2;
  string maintainer = 3;
  map<string, DataSource> dataSources = 4;
  map<string, StoredProcedure> storedProcedures = 5;
  map<string, EventTrigger> eventTriggers = 6;
  map<string, Event> events = 7;
}

message GetChartIdReq {
  string chartId = 1;
  string namespace = 2;
  string maintainer = 3;
}

message DeleteChartReq {
  string name = 1;
  string namespace = 2;
  string maintainer = 3;
  string apiVersion = 4;
  string schemaVersion = 5;
  string kind = 6;
}

message GetChartsLabelsReq {
  string namespace = 1;
  string maintainer = 2;
  map<string, string> labels = 3;
}

message GetChartsLabelsResp {
  repeated GetChartResp charts = 1;
}

message GetChartFromMetadataReq {
  string name = 1;
  string namespace = 2;
  string maintainer = 3;
}

message GetChartResp {
  MetadataChart metadata = 1;
  Chart chart = 2;
}

message PutChartResp {
  string apiVersion = 1;
  string schemaVersion = 2;
  string kind = 3;
  string name = 4;
  string namespace = 5;
  string maintainer = 6;
}